# galactic-bluetooth-audio

./: CMakeLists.txt
effect/: effect.hpp
src/: a2dp_sink.cpp
